--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-material-ui-carousel": "^3.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,8 +42,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080",
-  "devDependencies": {
-    "react-material-ui-carousel": "^3.4.2"
-  }
+  "proxy": "http://localhost:8080"
+
 }
