--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,5 +6,7 @@ sync:
     script:
         - git remote add bitbucket https://{BITBUCKET_USERNAME}:{BITBUCKET_APP_PASSWORD}@bitbucket.org/team1-holo/holo-fe.git
         - git push bitbucket HEAD:refs/heads/main  # GitLab의 dev 브랜치를 Bitbucket의 main 브랜치로 푸시
+    tags:
+        - sync
     only:
         - dev  # GitLab의 dev 브랜치에서만 실행되도록 설정
